fixed mobile overlapping scoreboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     color: rgb(255, 255, 255);
-    position: absolute; 
+    position: relative; 
     left: 0; 
     top: 0; 
     margin: 20px;
@@ -72,11 +72,11 @@ body {
 
 /* Score display */
 #score {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0; 
     right: 0; 
-    padding: 10px;
+    padding: 0px;
     color: white; 
     text-align: center; 
     z-index: 10;
